# TDMConsole

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  NOTICE  README.md  README_CN.md  main.py  pyproject.toml  requirements.txt  run.sh  tdmconsole.spec  test_repl.py  test_tui.py  test_web.py
.github/workflows/: docker.yml  release.yml
assets/: favicon.icns
scripts/: package-macos.sh  write_build_info.py
tdm_cli/: __init__.py  bootstrap.py  commands.py  console.py  gui.py  prefs.py  repl.py  state.py  updater.py  versioning.py  wizard.py
tdm_cli/tui/: __init__.py  app.py  repl_app.py  screens.py
tdm_cli/web/: __init__.py  i18n.py  server.py
tdm_cli/web/static/: app.css  app.js  index.html  login.css  login.html  login.js
tests/: test_runtime_update.py  test_update_command.py  test_updater.py  test_web_auth.py  test_web_snapshot.py
