[project]
name = "tdm-cli"
version = "0.1.0"
description = "Headless CLI front-end for DevilXD's TwitchDropsMiner"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9,<4.0",
    "textual>=8.2.8",
    "truststore",
    # GUI mode (--mode gui) runs upstream's native tkinter window, which needs
    # these; the other four frontends never import them (bootstrap stubs them
    # out when absent). tkinter itself ships with CPython.
    "Pillow",
    "pystray",
]

[tool.uv]
# This is an application, not an installable library — don't try to build it.
package = false

[dependency-groups]
build = [
    "pyinstaller>=6.0,<7.0",
]
